--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,7 @@ dbConfig:
 
 apiConfig:
   base_uri: 'https://api.etherscan.io/'
-  token: '84TFIGZS8D2FH8Y66VAGS895PGPRTAR2VZ'
+  token: '<your api token here>'
 
 serverConfig:
   port: 1323
